<resources>
    <string name="app_name">My Attendance Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_share">Share</string>
    <string name="name">Name</string>
    <string name="college">College</string>
    <string name="standard">Class</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="enroll_no">Enroll No.</string>
</resources>